--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.clickatell</groupId>
-    <artifactId>RestAssured</artifactId>
+    <artifactId>bigbrotherAutomation</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
@@ -119,7 +119,7 @@
                         </property>
                     </properties>
                     <suiteXmlFiles>
-                        <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
+                        <suiteXmlFile>testng.xml</suiteXmlFile>
                     </suiteXmlFiles>
                 </configuration>
             </plugin>
