--- a/pom.xml
+++ b/pom.xml
@@ -124,7 +124,10 @@
                         </property>
                     </properties>
                     <suiteXmlFiles>
-                        <suiteXmlFile>testng.xml</suiteXmlFile>
+                        <suiteXmlFile>C:\GitHub\BigBrotherAutomation\bigbrotherautomation\src\test\resources\PingTestsSuite.xml</suiteXmlFile>
+                        <suiteXmlFile>C:\GitHub\BigBrotherAutomation\bigbrotherautomation\src\test\resources\IsEmptyTest.xml</suiteXmlFile>
+                        <suiteXmlFile>C:\GitHub\BigBrotherAutomation\bigbrotherautomation\src\test\resources\USSDTestSuite.xml</suiteXmlFile>
+                        <suiteXmlFile>C:\GitHub\BigBrotherAutomation\bigbrotherautomation\src\test\resources\MVMTestSuite.xml</suiteXmlFile>
                     </suiteXmlFiles>
                 </configuration>
             </plugin>
