Add get client test

--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,9 @@
                         </property>
                     </properties>
                     <suiteXmlFiles>
+                        <suiteXmlFile>
+                            C:\GitHub\BigBrotherAutomation\bigbrotherautomation\src\test\resources\FlowManagerGetClientsSuite.xml
+                        </suiteXmlFile>
                         <suiteXmlFile>C:\GitHub\BigBrotherAutomation\bigbrotherautomation\src\test\resources\FullRegression.xml</suiteXmlFile>
                         <suiteXmlFile>C:\GitHub\BigBrotherAutomation\bigbrotherautomation\src\test\resources\ConfirmTestSuite.xml</suiteXmlFile>
                         <suiteXmlFile>C:\GitHub\BigBrotherAutomation\bigbrotherautomation\src\test\resources\PWMReserveFundsTestSuite.xml</suiteXmlFile>
