--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
             <version>4.1.1</version>
-<!--            <scope>test</scope>-->
+            <!--            <scope>test</scope>-->
         </dependency>
         <dependency>
             <groupId>com.aventstack</groupId>
@@ -138,13 +138,27 @@
                         <suiteXmlFile>
                             C:\GitHub\BigBrotherAutomation\bigbrotherautomation\src\test\resources\FlowManagerGetClientsSuite.xml
                         </suiteXmlFile>
-                        <suiteXmlFile>C:\GitHub\BigBrotherAutomation\bigbrotherautomation\src\test\resources\FullRegression.xml</suiteXmlFile>
-                        <suiteXmlFile>C:\GitHub\BigBrotherAutomation\bigbrotherautomation\src\test\resources\ConfirmTestSuite.xml</suiteXmlFile>
-                        <suiteXmlFile>C:\GitHub\BigBrotherAutomation\bigbrotherautomation\src\test\resources\PWMReserveFundsTestSuite.xml</suiteXmlFile>
-                        <suiteXmlFile>C:\GitHub\BigBrotherAutomation\bigbrotherautomation\src\test\resources\PingTestsSuite.xml</suiteXmlFile>
-                        <suiteXmlFile>C:\GitHub\BigBrotherAutomation\bigbrotherautomation\src\test\resources\IsEmptyTest.xml</suiteXmlFile>
-                        <suiteXmlFile>C:\GitHub\BigBrotherAutomation\bigbrotherautomation\src\test\resources\USSDTestSuite.xml</suiteXmlFile>
-                        <suiteXmlFile>C:\GitHub\BigBrotherAutomation\bigbrotherautomation\src\test\resources\MVMTestSuite.xml</suiteXmlFile>
+                        <suiteXmlFile>
+                            C:\GitHub\BigBrotherAutomation\bigbrotherautomation\src\test\resources\FullRegression.xml
+                        </suiteXmlFile>
+                        <suiteXmlFile>
+                            C:\GitHub\BigBrotherAutomation\bigbrotherautomation\src\test\resources\ConfirmTestSuite.xml
+                        </suiteXmlFile>
+                        <suiteXmlFile>
+                            C:\GitHub\BigBrotherAutomation\bigbrotherautomation\src\test\resources\PWMReserveFundsTestSuite.xml
+                        </suiteXmlFile>
+                        <suiteXmlFile>
+                            C:\GitHub\BigBrotherAutomation\bigbrotherautomation\src\test\resources\PingTestsSuite.xml
+                        </suiteXmlFile>
+                        <suiteXmlFile>
+                            C:\GitHub\BigBrotherAutomation\bigbrotherautomation\src\test\resources\IsEmptyTest.xml
+                        </suiteXmlFile>
+                        <suiteXmlFile>
+                            C:\GitHub\BigBrotherAutomation\bigbrotherautomation\src\test\resources\USSDTestSuite.xml
+                        </suiteXmlFile>
+                        <suiteXmlFile>
+                            C:\GitHub\BigBrotherAutomation\bigbrotherautomation\src\test\resources\MVMTestSuite.xml
+                        </suiteXmlFile>
                     </suiteXmlFiles>
                 </configuration>
             </plugin>
