--- a/pom.xml
+++ b/pom.xml
@@ -159,6 +159,9 @@
                         <suiteXmlFile>
                             C:\GitHub\BigBrotherAutomation\bigbrotherautomation\src\test\resources\MVMTestSuite.xml
                         </suiteXmlFile>
+                        <suiteXmlFile>
+                            C:\GitHub\BigBrotherAutomation\bigbrotherautomation\src\test\resources\GetKeyWordsTestSuite.xml
+                        </suiteXmlFile>
                     </suiteXmlFiles>
                 </configuration>
             </plugin>
