add prfiling to mytests

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -34,6 +34,8 @@ MWM_Vend_RequestSpec_BasePath=${MWM_Vend_RequestSpec_BasePath}
 MWM_VendLookUp_RequestSpec_BaseUri=${MWM_VendLookUp_RequestSpec_BaseUri}
 MWM_VendLookUp_RequestSpec_Port=${MWM_VendLookUp_RequestSpec_Port}
 MWM_VendLookUp_RequestSpec_BasePath=${MWM_VendLookUp_RequestSpec_BasePath}
+QA_Refresh_BackEnd=${QA_BASE_BACKEND_REFRESH}
+QA_MINION=${QA_MINION}
 
 
 
