--- a/src/test/resources/config.qa.properties
+++ b/src/test/resources/config.qa.properties
@@ -1,12 +1,12 @@
-FM_GetClients_FUNDINGSOURCES_BaseUri=http://control-ui-backend.qa.za01.payd.co
+QA_MINION=http://docker-minion01.dev.za01.payd.co
+QA_BASE_BACKEND_REFRESH=http://control-ui-backend.qa.za01.payd.co
+
+
+
 FM_GetClients_FUNDINGSOURCES_BasePath=/management/dev/FUNDING_SOURCE
-FM_GetClients_FUNDINGSOURCES_Host=control-ui-backend.qa.za01.payd.co
-FM_GetClients_CLIENTS_BaseUri=http://control-ui-backend.qa.za01.payd.co
 FM_GetClients_CLIENTS_BasePath=/management/dev/CLIENT
-FM_GetClients_CLIENTS_Host=control-ui-backend.qa.za01.payd.co
-FM_GetClients_VENDORS_BaseUri=http://control-ui-backend.qa.za01.payd.co
 FM_GetClients_VENDORS_BasePath=/management/dev/VENDOR
-FM_GetClients_VENDORS_Host=control-ui-backend.qa.za01.payd.co
+
 PWM_ReserveFunds_RequestSpec_BaseUri=http://docker-minion01.dev.za01.payd.co
 PWM_ReserveFunds_RequestSpec_Port=31915
 PWM_ReserveFunds_RequestSpec_BasePath=/fundingsource/reserve
@@ -34,6 +34,7 @@ MWM_Vend_RequestSpec_BasePath=/vendor/vend
 MWM_VendLookUp_RequestSpec_BaseUri=http://docker-minion01.dev.za01.payd.co
 MWM_VendLookUp_RequestSpec_Port=31910
 MWM_VendLookUp_RequestSpec_BasePath=/vendor/lookup
+
 
 
 
