Refactor/reporting environmentchanges

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -23,6 +23,7 @@ MWM_VendLookUp_RequestSpec_Port=${MWM_VendLookUp_RequestSpec_Port}
 MWM_VendLookUp_RequestSpec_BasePath=${MWM_VendLookUp_RequestSpec_BasePath}
 QA_Refresh_BackEnd=${QA_BASE_BACKEND_REFRESH}
 QA_MINION=${QA_MINION}
+ENVIRONMENT=${ENVIRONMENT}
 
 
 
