comment out the proxy setting

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -15,15 +15,14 @@ PWM_Lookup_Behaviour_RequestSpec_Port=${PWM_Lookup_Behaviour_RequestSpec_Port}
 PWM_Lookup_Behaviour_RequestSpec_BasePath=${PWM_Lookup_Behaviour_RequestSpec_BasePath}
 MWM_Ping_RequestSpec_Port=${MWM_Ping_RequestSpec_Port}
 MWM_Ping_RequestSpec_BasePath=${MWM_Ping_RequestSpec_BasePath}
-MWM_Vend_RequestSpec_BaseUri=${MWM_Vend_RequestSpec_BaseUri}
 MWM_Vend_RequestSpec_Port=${MWM_Vend_RequestSpec_Port}
 MWM_Vend_RequestSpec_BasePath=${MWM_Vend_RequestSpec_BasePath}
-MWM_VendLookUp_RequestSpec_BaseUri=${MWM_VendLookUp_RequestSpec_BaseUri}
 MWM_VendLookUp_RequestSpec_Port=${MWM_VendLookUp_RequestSpec_Port}
 MWM_VendLookUp_RequestSpec_BasePath=${MWM_VendLookUp_RequestSpec_BasePath}
 QA_Refresh_BackEnd=${QA_BASE_BACKEND_REFRESH}
 QA_MINION=${QA_MINION}
 ENVIRONMENT=${ENVIRONMENT}
+REPORTING = ${REPORTING}
 
 
 
