--- a/src/test/resources/config.qa.properties
+++ b/src/test/resources/config.qa.properties
@@ -22,6 +22,7 @@ MWM_Vend_RequestSpec_BasePath=/vendor/vend
 MWM_VendLookUp_RequestSpec_Port=31910
 MWM_VendLookUp_RequestSpec_BasePath=/vendor/lookup
 ENVIRONMENT=QA Test Environment
+REPORTING=false
 
 
 
