Feature/ui start

--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,12 @@
             <version>3.7.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.codeborne</groupId>
+            <artifactId>selenide</artifactId>
+            <version>5.4.1</version>
+            <scope>test</scope>
+        </dependency>
 
         <dependency>
             <groupId>com.googlecode.json-simple</groupId>
