--- a/src/test/resources/config.uat.properties
+++ b/src/test/resources/config.uat.properties
@@ -22,4 +22,4 @@ MWM_Vend_RequestSpec_BasePath=/vendor/vend
 MWM_VendLookUp_RequestSpec_Port=31910
 MWM_VendLookUp_RequestSpec_BasePath=/vendor/lookup
 ENVIRONMENT=QA Test Environment
-REPORTING=false
+REPORTING=true
