Added QA environment config changes to sqlDataAccessLayer, added ability to change sql arithmatic operator when initiating a new query.

--- a/src/test/resources/config.qa.properties
+++ b/src/test/resources/config.qa.properties
@@ -23,3 +23,7 @@ MWM_VendLookUp_RequestSpec_Port=31910
 MWM_VendLookUp_RequestSpec_BasePath=/vendor/lookup
 ENVIRONMENT=QA Test Environment
 REPORTING=false
+# Database property vars
+CONNECTION_URL=jdbc:postgresql://pgdb.qa.za01.payd.co:5432/raas
+RAAS_USER=qa_appl_w_readyapi
+RAAS_PWD=api_reed
