Feature/create dot core regression transact v4 test

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -23,6 +23,9 @@ QA_Refresh_BackEnd=${QA_BASE_BACKEND_REFRESH}
 QA_MINION=${QA_MINION}
 ENVIRONMENT=${ENVIRONMENT}
 REPORTING = ${REPORTING}
+# dotCore test specs
+CORE_Transact_V4_RequestSpec_Port=${CORE_Transact_V4_RequestSpec_Port}
+CORE_Transact_V4_RequestSpec_BasePath=${CORE_Transact_V4_RequestSpec_BasePath}
 
 
 
