--- a/src/test/resources/config.qa.properties
+++ b/src/test/resources/config.qa.properties
@@ -27,3 +27,6 @@ REPORTING=false
 CONNECTION_URL=jdbc:postgresql://pgdb.qa.za01.payd.co:5432/raas
 RAAS_USER=qa_appl_w_readyapi
 RAAS_PWD=api_reed
+# dotCore test specs
+CORE_Transact_V4_RequestSpec_Port=30100
+CORE_Transact_V4_RequestSpec_BasePath=/raas/v4/transact
