--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,12 @@
         </dependency>
 
 
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.8</version>
+        </dependency>
+
     </dependencies>
 
     <build>
